--- a/module_1/app/templates/base.html
+++ b/module_1/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Kate's Personal Site - {% block title %}{% endblock title %}</title>
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 <body>
